# atCoder

./: a.out  test.cpp
A/: ABC333.cpp  hello2.cpp  template.cpp
A/20220825/: ABC_086.py  shit-only.cpp
A/20220826/: ABC_083.cpp  ABC_087.cpp  a.out
B/: AcCepted.cpp  CardGameForTwo.cpp  CutAndCount.cpp  Exponential.cpp  FoodsLovedByEveryone.cpp  SumOfThreeIntegers.cpp  Trained.cpp  a.out  kagamiMochi.cpp
C/: Attention.cpp  Bridge.cpp  GreenBin.cpp  GuessTheNumber.cpp  HalfAnfHalf.cpp  IndependentSetOnTree.cpp  Management.cpp  MinimumCoins.cpp  NotSoDiverse.cpp  Peaks.cpp  Poll.cpp  ScoreSumQueries.cpp  SelectOne.cpp  TakashisInformation.cpp  Tour.cpp  TrainTicket.cpp  WalkingTakahashi.cpp  WriteAndErase.cpp  a.out
C_template/: AccumulationSum.cpp  a.out  graph.cpp
D/: Ksum.cpp  Teleporter.cpp  XORworld.cpp  a.out  template.cpp
E/: a.out  sprinkler.cpp
hello.dSYM/Contents/Resources/DWARF/: hello
rust/: Cargo.toml
rust-atcoder/: Cargo.toml
rust-atcoder/src/B/: Trained.rs
rust/src/A/: abc333.rs
rust/src/B/: select.rs
rust/src/C/: minimization.rs  walking_takahashi.rs
