[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# 入力を受け取るマクロ
proconio = "0.3.6"

# A問題
[[bin]]
name = "abc333"
path = "src/A/abc333.rs"

# B問題
[[bin]]
name = "trained"
path = "src/B/trained.rs"

[[bin]]
name = "select"
path = "src/B/select.rs"

# C問題
[[bin]]
name = "walking_takahashi"
path = "src/C/walking_takahashi.rs"

[[bin]]
name = "minimization"
path = "src/C/minimization.rs" 
